fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -1242,7 +1242,7 @@ ul {
 .services-mainscreen__text {
     max-width: 610px;
     line-height: 180%;
-    gap: 40px;
+    gap: 28px;
 }
 
 .services-mainscreen__text a {
@@ -2565,6 +2565,10 @@ input:checked + .notification__checkbox::before {
         width: fit-content;
         padding-left: 24px;
         padding-right: 24px;
+        margin-top: 20px;
+    }
+    .services-mainscreen__text {
+        gap: 10px;
     }
     .notification__main {
         padding: 0 30px;
